<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:id="@+id/main_holder"
    android:padding="30dp">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register_desc"
        android:textSize="16sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register_here"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:layout_marginTop="5dp"/>

    <com.example.submissionintermediate2.customview.CustomEditText
        style="@style/rounded_edit_text"
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:maxLines="1"
        android:layout_marginTop="20dp"
        android:hint="@string/email" />

    <com.example.submissionintermediate2.customview.CustomEditText
        style="@style/rounded_edit_text"
        android:id="@+id/ed_login_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>