<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:padding="30dp">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher_background" />

    <EditText
        style="@style/rounded_edit_text"
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/img_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/black"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp" />

    <com.example.submissionintermediate2.customview.CustomEditText
        style="@style/rounded_edit_text"
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:maxLines="1"
        android:hint="@string/email"
        android:layout_marginTop="20dp" />

    <com.example.submissionintermediate2.customview.CustomEditText
        style="@style/rounded_edit_text"
        android:id="@+id/ed_register_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:maxLines="1"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:layout_marginTop="20dp" />

    <Button
        style="@style/rounded_button"
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>